@@ -104,7 +104,7 @@ class QWEBKIT_EXPORT QWebFrame : public QObject
     Q_PROPERTY(QUrl url READ url WRITE setUrl)
     Q_PROPERTY(QIcon icon READ icon)
     Q_PROPERTY(QSize contentsSize READ contentsSize)
-    Q_PROPERTY(QSize scrollOffset READ scrollOffset WRITE setScrollOffset)
+    Q_PROPERTY(QPoint scrollOffset READ scrollOffset WRITE setScrollOffset)
 private:
     QWebFrame(QWebPage *parent, QWebFrameData *frameData);
     QWebFrame(QWebFrame *parent, QWebFrameData *frameData);
@@ -149,8 +149,8 @@ public:
     int scrollBarMaximum(Qt::Orientation orientation) const;
 
     void scroll(int, int) const;
-    QSize scrollOffset() const;
-    void setScrollOffset(const QSize &offset) const;
+    QPoint scrollOffset() const;
+    void setScrollOffset(const QPoint &offset) const;
 
     void render(QPainter *painter, const QRegion &clip);
     void render(QPainter *painter);
